fix url alignment on edit page

--- a/bookie/static/css/base.scss
+++ b/bookie/static/css/base.scss
@@ -306,6 +306,7 @@ form {
         display: inline-block;
         overflow: hidden;
         width: 35em;
+        vertical-align: bottom;
     }
 }
 
